feat:签名字符串debug显示

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "email": "save.zxf@gmail.com"
   },
   "dependencies": {
-    "create-hmac": "^1.1.7"
+    "crypto-js": "^4.1.1"
   },
   "devDependencies": {
   },
